--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -1,11 +1,4 @@
-.gist .gist-file {
-  background-color: transparent !important;
-  border: none !important;
-  background-color: #fdf6e3;
-  @include rounded(6px);
-}
-
-.gist .highlight {
+table.highlighttable {
   border-collapse: separate;
   border-spacing: 0;
   @include rounded(6px);
@@ -14,52 +7,39 @@
   margin-bottom: 25px;
   border: 1px solid rgba(147, 161, 161, 0.55);
 }
-
-.highlight td {
+ 
+table.highlighttable td {
   padding: 0;
 }
-
-.gist .gist-data {
-  overflow: visible !important;
-  word-wrap: normal !important;
-  background-color: transparent !important;
-  border-bottom: none !important;
-}
-
-.gist .line-data {
+ 
+td.code {
   width: 602px;
   overflow: hidden;
   pre {
     overflow: hidden;
   }
 }
-
-.gist .line-numbers {
+ 
+td.linenos {
   width: 38px;
   overflow: hidden;
-  text-align: right;
-  background: #eee8d5 !important;
-  padding-right: 6px;
-  color: #9da1a1;
   pre {
     overflow: hidden;
   }
 }
-
-.gist-meta {
-  padding: 5px 40px !important;
-  background-color: transparent !important;
-  color: rgba(187,187,187,0.8) !important;
-  a {
-    color: rgba(187,187,187,0.8) !important;
-  }
+ 
+.linenodiv {
+  text-align: right;
+  background: #eee8d5;
+  padding-right: 6px;
+  color: #9da1a1;
 }
-
-
-.gist .highlight {
+ 
+ 
+.highlight {
   @include font(12);
-  color: #586e75 !important;
-  background-color: #fdf6e3 !important;
+  color: #586e75;
+  background-color: #fdf6e3;
   pre {
       padding-left: 6px;
   }
