--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -1,7 +1,7 @@
 .gist .gist-file {
   background-color: transparent !important;
   border: none !important;
-  background-color: #fdf6e3;
+  background-color: $base3;
   @include rounded(6px);
 }
 
@@ -55,82 +55,92 @@
   }
 }
 
+$base01:    #586e75;
+$base1:     #93a1a1;
+$base3:     #fdf6e3;
+$red:       #dc322f;
+$yellow:    #b58900;
+$orange:    #cb4b16;
+$green:     #859900;
+$blue:      #268bd2;
+$cyan:      #2aa198;
+
 
 .gist .highlight {
   @include font(12);
-  color: #586e75 !important;
-  background-color: #fdf6e3 !important;
+  color: $base01 !important;
+  background-color: $base3 !important;
   pre {
       padding-left: 6px;
   }
-  .lineno { color: #93a1a1 !important} /* Line Numbers */
-  .hhl { background-color: #fdf6e3 !important }
-  .c  { color: #93a1a1 !important} /* Comment */
-  .cm { color: #93a1a1 !important} /* Comment.Multiline */
-  .c1 { color: #93a1a1 !important} /* Comment.Single */
-  .sb { color: #93a1a1 !important} /* Literal.String.Backtick */
-  .err{ color: #586e75 !important} /* Error */
-  .g  { color: #586e75 !important} /* Generic */
-  .l  { color: #586e75 !important} /* Literal */
-  .n  { color: #586e75 !important} /* Name */
-  .p  { color: #586e75 !important} /* Punctuation */
-  .ge { color: #586e75; font-style: italic !important} /* Generic.Emph */
-  .go { color: #586e75 !important} /* Generic.Output */
-  .gp { color: #586e75 !important} /* Generic.Prompt */
-  .gs { color: #586e75; font-weight: bold !important} /* Generic.Strong */
-  .gt { color: #586e75 !important} /* Generic.Traceback */
-  .ld { color: #586e75 !important} /* Literal.Date */
-  .na { color: #586e75 !important} /* Name.Attribute */
-  .nl { color: #586e75 !important} /* Name.Label */
-  .nn { color: #586e75 !important} /* Name.Namespace */
-  .py { color: #586e75 !important} /* Name.Property */
-  .nx { color: #586e75 !important} /* Name.Other */
-  .w  { color: #586e75 !important} /* Text.Whitespace */
-  .sd { color: #586e75 !important} /* Literal.String.Doc */
-  .sh { color: #586e75 !important} /* Literal.String.Heredoc */
-  .cp { color: #859900 !important} /* Comment.Preproc */
-  .cs { color: #859900 !important} /* Comment.Special */
-  .o  { color: #859900 !important} /* Operator */
-  .gi { color: #859900 !important} /* Generic.Inserted */
-  .k  { color: #859900 !important} /* Keyword */
-  .kn { color: #859900 !important} /* Keyword.Namespace */
-  .kp { color: #859900 !important} /* Keyword.Pseudo */
-  .ow { color: #859900 !important} /* Operator.Word */
-  .nb { color: #B58900 !important} /* Name.Builtin */
-  .gu { color: #cb4b16 !important} /* Generic.Subheading */
-  .ni { color: #cb4b16 !important} /* Name.Entity */
-  .x  { color: #cb4b16 !important} /* Other */
-  .ne { color: #cb4b16 !important} /* Name.Exception */
-  .gh { color: #cb4b16 !important} /* Generic.Heading */
-  .no { color: #cb4b16 !important} /* Name.Constant */
-  .kc { color: #cb4b16 !important} /* Keyword.Constant */
-  .se { color: #cb4b16 !important} /* Literal.String.Escape */
-  .gr { color: #dc322f !important} /* Generic.Error */
-  .kt { color: #dc322f !important} /* Keyword.Type */
-  .sr { color: #dc322f !important} /* Literal.String.Regex */
-  .kd { color: #268bd2 !important} /* Keyword.Declaration */
-  .kr { color: #268bd2 !important} /* Keyword.Reserved */
-  .nc { color: #268bd2 !important} /* Name.Class */
-  .nd { color: #268bd2 !important} /* Name.Decorator */
-  .nf { color: #268bd2 !important} /* Name.Function */
-  .bp { color: #268bd2 !important} /* Name.Builtin.Pseudo */
-  .nt { color: #268bd2 !important} /* Name.Tag */
-  .nv { color: #268bd2 !important} /* Name.Variable */
-  .vc { color: #268bd2 !important} /* Name.Variable.Class */
-  .vi { color: #268bd2 !important} /* Name.Variable.Instance */
-  .vg { color: #268bd2 !important} /* Name.Variable.Global */
-  .gd { color: #2aa198 !important} /* Generic.Deleted */
-  .m  { color: #2aa198 !important} /* Literal.Number */
-  .s  { color: #2aa198 !important} /* Literal.String */
-  .mf { color: #2aa198 !important} /* Literal.Number.Float */
-  .mh { color: #2aa198 !important} /* Literal.Number.Hex */
-  .mi { color: #2aa198 !important} /* Literal.Number.Integer */
-  .mo { color: #2aa198 !important} /* Literal.Number.Oct */
-  .sc { color: #2aa198 !important} /* Literal.String.Char */
-  .s2 { color: #2aa198 !important} /* Literal.String.Double */
-  .si { color: #2aa198 !important} /* Literal.String.Interpol */
-  .sx { color: #2aa198 !important} /* Literal.String.Other */
-  .s1 { color: #2aa198 !important} /* Literal.String.Single */
-  .ss { color: #2aa198 !important} /* Literal.String.Symbol */
-  .il { color: #2aa198 !important} /* Literal.Number.Integer.Long */
+  .hhl { background-color: $base3 !important }
+  .lineno { color: $base1 !important} /* Line Numbers */
+  .c  { color: $base1 !important} /* Comment */
+  .cm { color: $base1 !important} /* Comment.Multiline */
+  .c1 { color: $base1 !important} /* Comment.Single */
+  .sb { color: $base1 !important} /* Literal.String.Backtick */
+  .err{ color: $base01 !important} /* Error */
+  .g  { color: $base01 !important} /* Generic */
+  .l  { color: $base01 !important} /* Literal */
+  .n  { color: $base01 !important} /* Name */
+  .p  { color: $base01 !important} /* Punctuation */
+  .ge { color: $base01; font-style: italic !important} /* Generic.Emph */
+  .go { color: $base01 !important} /* Generic.Output */
+  .gp { color: $base01 !important} /* Generic.Prompt */
+  .gs { color: $base01; font-weight: bold !important} /* Generic.Strong */
+  .gt { color: $base01 !important} /* Generic.Traceback */
+  .ld { color: $base01 !important} /* Literal.Date */
+  .na { color: $base01 !important} /* Name.Attribute */
+  .nl { color: $base01 !important} /* Name.Label */
+  .nn { color: $base01 !important} /* Name.Namespace */
+  .py { color: $base01 !important} /* Name.Property */
+  .nx { color: $base01 !important} /* Name.Other */
+  .w  { color: $base01 !important} /* Text.Whitespace */
+  .sd { color: $base01 !important} /* Literal.String.Doc */
+  .sh { color: $base01 !important} /* Literal.String.Heredoc */
+  .cp { color: $green !important} /* Comment.Preproc */
+  .cs { color: $green !important} /* Comment.Special */
+  .o  { color: $green !important} /* Operator */
+  .gi { color: $green !important} /* Generic.Inserted */
+  .k  { color: $green !important} /* Keyword */
+  .kn { color: $green !important} /* Keyword.Namespace */
+  .kp { color: $green !important} /* Keyword.Pseudo */
+  .ow { color: $green !important} /* Operator.Word */
+  .nb { color: $yellow !important} /* Name.Builtin */
+  .gu { color: $orange !important} /* Generic.Subheading */
+  .ni { color: $orange !important} /* Name.Entity */
+  .x  { color: $orange !important} /* Other */
+  .ne { color: $orange !important} /* Name.Exception */
+  .gh { color: $orange !important} /* Generic.Heading */
+  .no { color: $orange !important} /* Name.Constant */
+  .kc { color: $orange !important} /* Keyword.Constant */
+  .se { color: $orange !important} /* Literal.String.Escape */
+  .gr { color: $red !important} /* Generic.Error */
+  .kt { color: $red !important} /* Keyword.Type */
+  .sr { color: $red !important} /* Literal.String.Regex */
+  .kd { color: $blue !important} /* Keyword.Declaration */
+  .kr { color: $blue !important} /* Keyword.Reserved */
+  .nc { color: $blue !important} /* Name.Class */
+  .nd { color: $blue !important} /* Name.Decorator */
+  .nf { color: $blue !important} /* Name.Function */
+  .bp { color: $blue !important} /* Name.Builtin.Pseudo */
+  .nt { color: $blue !important} /* Name.Tag */
+  .nv { color: $blue !important} /* Name.Variable */
+  .vc { color: $blue !important} /* Name.Variable.Class */
+  .vi { color: $blue !important} /* Name.Variable.Instance */
+  .vg { color: $blue !important} /* Name.Variable.Global */
+  .gd { color: $cyan !important} /* Generic.Deleted */
+  .m  { color: $cyan !important} /* Literal.Number */
+  .s  { color: $cyan !important} /* Literal.String */
+  .mf { color: $cyan !important} /* Literal.Number.Float */
+  .mh { color: $cyan !important} /* Literal.Number.Hex */
+  .mi { color: $cyan !important} /* Literal.Number.Integer */
+  .mo { color: $cyan !important} /* Literal.Number.Oct */
+  .sc { color: $cyan !important} /* Literal.String.Char */
+  .s2 { color: $cyan !important} /* Literal.String.Double */
+  .si { color: $cyan !important} /* Literal.String.Interpol */
+  .sx { color: $cyan !important} /* Literal.String.Other */
+  .s1 { color: $cyan !important} /* Literal.String.Single */
+  .ss { color: $cyan !important} /* Literal.String.Symbol */
+  .il { color: $cyan !important} /* Literal.Number.Integer.Long */
 }
