--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -48,3 +48,17 @@ $large               : "only screen and (min-width: 62.5em)";
 // --------------------------------------------------
 
 $header-height       : 400px;
+
+
+// Syntax highlight colors
+// --------------------------------------------------
+
+$base01              : #586e75;
+$base1               : #93a1a1;
+$base3               : #fdf6e3;
+$red                 : #dc322f;
+$yellow              : #b58900;
+$orange              : #cb4b16;
+$green               : #859900;
+$blue                : #268bd2;
+$cyan                : #2aa198;
