--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -55,6 +55,7 @@ $header-height       : 400px;
 
 $base01              : #586e75;
 $base1               : #93a1a1;
+$base2               : #eee8d5;
 $base3               : #fdf6e3;
 $red                 : #dc322f;
 $yellow              : #b58900;
