selection color updated

--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -48,10 +48,12 @@
 
 .gist {
   ::selection {
-    background: $base2;
+    background: $magenta;
+    color: white;
   }
   ::-moz-selection {
-    background: $base2;
+    background: $magenta;
+    color: white;
   }
 }
 
