--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,6 +58,7 @@ $base1               : #93a1a1;
 $base2               : #eee8d5;
 $base3               : #fdf6e3;
 $red                 : #dc322f;
+$magenta             : #d33682;
 $yellow              : #b58900;
 $orange              : #cb4b16;
 $green               : #859900;
