color matching process

--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -122,7 +122,7 @@
   .kd { color: $blue !important} /* Keyword.Declaration */
   .kr { color: $blue !important} /* Keyword.Reserved */
   .nc { color: $blue !important} /* Name.Class */
-  .nd, .pl-s3 { color: $blue !important} /* Name.Decorator */
+  .nd { color: $blue !important} /* Name.Decorator */
   .nf, .pl-en { color: $blue !important} /* Name.Function */
   .bp, .pl-c1, .pl-v, .pl-vpf { color: $blue !important} /* Name.Builtin.Pseudo */
   .nt, .pl-ent { color: $blue !important} /* Name.Tag */
