--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -38,6 +38,7 @@
     overflow: hidden;
     pre {
       overflow: hidden;
+    }
   }
 
   .line-numbers {
@@ -49,6 +50,7 @@
     color: #9da1a1;
     pre {
       overflow: hidden;
+    }
   }
 
   .gist-meta {
