--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -64,3 +64,6 @@ $orange              : #cb4b16;
 $green               : #859900;
 $blue                : #268bd2;
 $cyan                : #2aa198;
+
+$selection-bg        :$base2;
+$selection-color     :white;
