--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -65,5 +65,7 @@ $green               : #859900;
 $blue                : #268bd2;
 $cyan                : #2aa198;
 
-$selection-bg        :$base2;
-$selection-color     :white;
+$selection-bg        : $base2;
+$selection-color     : $blue;
+
+$gist-meta-color     : rgba(187,187,187,0.8)
