--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -66,6 +66,6 @@ $blue                : #268bd2;
 $cyan                : #2aa198;
 
 $selection-bg        : $base2;
-$selection-color     : $blue;
+$selection-color     : $base3;
 
 $gist-meta-color     : rgba(187,187,187,0.8)
