--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -213,7 +213,7 @@ header .entry-meta {
         margin: 40px 2px 20px 2px;
         padding: 10px 15px;
         background-color: $white;
-        box-shadow: 0 0 0 0, 0 6px 12px rgba($black,0.1);
+        box-shadow: box-shadow: 0 7px 24px rgba(34,34,34,0.45);
         @include rounded(6px);
         @media #{$medium} {
             margin-left: 10px;
@@ -233,7 +233,7 @@ header .entry-meta {
         margin: 40px 2px 20px 2px;
         padding: 10px 15px;
         background-color: $white;
-        box-shadow: 0 0 0 1px rgba($border-color,0.1), 0 6px 12px rgba($black,0.1);
+        box-shadow: box-shadow: 0 7px 24px rgba(34,34,34,0.45);
         @include rounded(6px);
         @media #{$medium} {
             margin-left: 10px;
@@ -287,7 +287,7 @@ header .entry-meta {
     margin: 40px 2px 20px 2px;
     padding: 40px 15px 25px;
     background-color: $white;
-    box-shadow: 0 0 0 1px rgba($border-color,0.1), 0 6px 12px rgba($black,0.1);
+    box-shadow: box-shadow: 0 7px 24px rgba(34,34,34,0.45);
     @include rounded(6px);
     @media #{$medium} {
         margin: 50px 10px 20px 10px;
@@ -374,7 +374,7 @@ header .entry-meta {
     }
     article {
         background-color: rgba(255, 255, 255, 0.9);
-        box-shadow: 0 0 0 0, 0 7px 24px rgba($base-color,0.45);
+        box-shadow: box-shadow: 0 7px 24px rgba(34,34,34,0.45);
         @include rounded(6px);
         margin-bottom: 20px;
         padding: 25px 15px;
