--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -41,7 +41,8 @@ body {
 }
 .header-title {
     text-align: center;
-    margin: 30px 0 0;
+    margin: 30px auto 0;
+    max-width: 80%;
     h1 {
         margin: 10px 20px;
         font-weight: 700;
