Resolving collision with the main page css

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -39,6 +39,13 @@ body {
     overflow: hidden;
     position: relative;
 }
+
+.feature .header-title {
+    text-align: center;
+    margin: 30px 0 0;
+    max-width: 100%;
+}
+
 .header-title {
     text-align: center;
     margin: 30px auto 0;
