--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -68,7 +68,7 @@ figcaption {
 
 // Blockquotes
 // --------------------------------------------------
-/*blockquote {
+blockquote {
     font-family: $alt-font;
     font-style: italic;
     border-left: 8px solid $border-color;
@@ -77,7 +77,7 @@ figcaption {
         margin-left: -28px;
     }
     font-size: 31px;
-}*/
+}
 
 
 // List items
