--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -83,34 +83,31 @@ blockquote {
     font-family: Georgia, serif;
     font-size: 18px;
     font-style: italic;
-    width: 500px;
     margin: 0.25em 0;
     padding: 0.25em 40px;
     line-height: 1.45;
     position: relative;
     color: #383838;
+    :before {
+        display: block;
+        content: "\201C";
+        font-size: 80px;
+        position: absolute;
+        left: -20px;
+        top: -20px;
+        color: #7a7a7a;
+    }
+    cite {
+        color: #999999;
+        font-size: 14px;
+        display: block;
+        margin-top: 5px;
+        :before {
+            content: "\2014 \2009";
+        }
+    }
 }
 
-blockquote:before {
-    display: block;
-    content: "\201C";
-    font-size: 80px;
-    position: absolute;
-    left: -20px;
-    top: -20px;
-    color: #7a7a7a;
-}
-
-blockquote cite {
-    color: #999999;
-    font-size: 14px;
-    display: block;
-    margin-top: 5px;
-}
- 
-blockquote cite:before {
-    content: "\2014 \2009";
-}
 
 // List items
 // --------------------------------------------------
