--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -87,7 +87,7 @@ blockquote {
     padding: 0.25em 40px;
     line-height: 1.45;
     position: relative;
-    color: #383838;
+    color: #6D6D6D;
     :before {
         display: block;
         content: "\201C";
@@ -95,10 +95,10 @@ blockquote {
         position: absolute;
         left: -20px;
         top: -20px;
-        color: #7a7a7a;
+        color: #8b8b8b;
     }
     cite {
-        color: #999999;
+        color: #8b8b8b;
         font-size: 14px;
         display: block;
         margin-top: 5px;
