--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -83,7 +83,7 @@ blockquote {
     font-family: Georgia, serif;
     font-size: 18px;
     font-style: italic;
-    margin: 0.25em 0;
+    margin: 0.25em 0 1.5em;
     padding: 0.25em 40px;
     line-height: 1.45;
     position: relative;
