--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -88,6 +88,7 @@ blockquote {
     line-height: 1.45;
     position: relative;
     color: #6D6D6D;
+    text-align: left;
     :before {
         display: block;
         content: "\201C";
