--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -138,7 +138,7 @@ li {
         margin: 0 2px;
         padding: 0 5px;
         border: 1px solid lighten($black, 90);
-        background-color: lighten($black, 95);
+        background-color: $base3;
         @include rounded(3px);
     }
 }
