--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -2,7 +2,9 @@
   background-color: transparent !important;
   border: none !important;
   background-color: $base3;
-  @include rounded(6px);
+  -webkit-border-radius : 6px;
+  -moz-border-radius : 6px;
+  border-radius : 6px;
 }
 
 .gist {
@@ -18,8 +20,12 @@
   .highlight {
     border-collapse: separate;
     border-spacing: 0;
-    @include rounded(6px);
-    @include box-shadow(0 2px 5px rgba(0, 0, 0, 0.09));
+    -webkit-border-radius : 6px;
+      -moz-border-radius : 6px;
+      border-radius : 6px;
+    -webkit-box-shadow : 0 2px 5px rgba(0, 0, 0, 0.09);
+    -moz-box-shadow : 0 2px 5px rgba(0, 0, 0, 0.09);
+    box-shadow : 0 2px 5px rgba(0, 0, 0, 0.09);
     overflow: hidden;
     margin-bottom: 25px;
     border: 1px solid rgba(147, 161, 161, 0.55);
@@ -62,7 +68,7 @@
   }
 
   .highlight {
-    @include font(12);
+    font-size: 12px;
     color: $base01 !important;
     background-color: $base3 !important;
     pre {
