--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -125,7 +125,7 @@
     .nd { color: $blue !important} /* Name.Decorator */
     .nf, .pl-en { color: $blue !important} /* Name.Function */
     .bp, .pl-c1, .pl-v, .pl-vpf { color: $blue !important} /* Name.Builtin.Pseudo */
-    .nt, .pl-ent { color: $blue !important} /* Name.Tag */
+    .nt, .pl-ent, .pl-vo { color: $blue !important} /* Name.Tag */
     .nv { color: $blue !important} /* Name.Variable */
     .vc { color: $blue !important} /* Name.Variable.Class */
     .vi { color: $blue !important} /* Name.Variable.Instance */
