--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -68,7 +68,7 @@
   }
 
   .highlight {
-    font-size: 12px;
+    font-size: 12px !important;
     color: $base01 !important;
     background-color: $base3 !important;
     pre {
