--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -41,6 +41,7 @@
   .line-data {
     width: 602px;
     overflow: hidden;
+    font-size: 100%;
     pre {
       overflow: hidden;
     }
@@ -50,6 +51,7 @@
     width: 38px;
     overflow: hidden;
     text-align: right;
+    font-size: 100%;
     background: $base2 !important;
     padding-right: 6px;
     color: #9da1a1;
@@ -68,7 +70,7 @@
   }
 
   .highlight {
-    font-size: 12px !important;
+    font-size: 12px;
     color: $base01 !important;
     background-color: $base3 !important;
     pre {
