--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -33,7 +33,7 @@ $primary             : #222;
 $success             : #5cb85c;
 $warning             : #dd8338;
 $danger              : #C64537;
-$info                : #369;
+$info                : #308cbc;
 
 
 // Screen Size
