--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,6 +2,10 @@
 <script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
 
+<script type="text/javascript">
+  var BASE_URL = '{{ site.url }}';
+</script>
+
 {% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
