--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -491,5 +491,19 @@ input#search-input {
   text-align: center;
   @include rounded(6px);
   border: none;
-  box-shadow: 0 1px 4px inset;
+  box-shadow: 0 1px 4px #555 inset;
+  color: #888;
+  padding: 4px;
+  font-size: 90%;
 }
+
+input#search-input:focus {
+  opacity: 0.8;
+  outline: 0;
+}
+
+ul#results-container {
+  @include transition(all .2s ease);
+}
+
+
