--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -502,8 +502,20 @@ input#search-input:focus {
   outline: 0;
 }
 
-ul#results-container {
-  @include transition(all .2s ease);
-}
+#results-container li:nth-child(1)  { -webkit-transform: translate3d(0, 0%, 0); transform: translate3d(0, 0%, 0); }
+#results-container li:nth-child(2)  { -webkit-transform: translate3d(0, 100%, 0); transform: translate3d(0, 100%, 0); }
+#results-container li:nth-child(3)  { -webkit-transform: translate3d(0, 200%, 0); transform: translate3d(0, 200%, 0); }
+#results-container li:nth-child(4)  { -webkit-transform: translate3d(0, 300%, 0); transform: translate3d(0, 300%, 0); }
+#results-container li:nth-child(5)  { -webkit-transform: translate3d(0, 400%, 0); transform: translate3d(0, 400%, 0); }
+#results-container li:nth-child(6)  { -webkit-transform: translate3d(0, 500%, 0); transform: translate3d(0, 500%, 0); }
+#results-container li:nth-child(7)  { -webkit-transform: translate3d(0, 600%, 0); transform: translate3d(0, 600%, 0); }
+#results-container li:nth-child(8)  { -webkit-transform: translate3d(0, 700%, 0); transform: translate3d(0, 700%, 0); }
+#results-container li:nth-child(9)  { -webkit-transform: translate3d(0, 800%, 0); transform: translate3d(0, 800%, 0); }
+#results-container li:nth-child(10) { -webkit-transform: translate3d(0, 900%, 0); transform: translate3d(0, 900%, 0); }
+#results-container li:nth-child(11) { -webkit-transform: translate3d(0, 1000%, 0); transform: translate3d(0, 1000%, 0); }
+#results-container li:nth-child(12) { -webkit-transform: translate3d(0, 1100%, 0); transform: translate3d(0, 1100%, 0); }
+#results-container li:nth-child(13) { -webkit-transform: translate3d(0, 1200%, 0); transform: translate3d(0, 1200%, 0); }
+#results-container li:nth-child(14) { -webkit-transform: translate3d(0, 1300%, 0); transform: translate3d(0, 1300%, 0); }
+#results-container li:nth-child(15) { -webkit-transform: translate3d(0, 1400%, 0); transform: translate3d(0, 1400%, 0);
 
 
