--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -56,6 +56,6 @@
 
 // Global Transition
 // ---------------------------------------------------
-b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a {
+b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a, ul, li {
     @include transition(all .2s ease);
 }
